internal/adapters/istio/testdata/authorizationpolicy_allow_empty_rules.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-none
  namespace: production
  uid: ap-allow-empty-001
spec:
  action: ALLOW
