internal/adapters/istio/testdata/authorizationpolicy_custom.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: custom-ext-authz
  namespace: production
  uid: ap-custom-001
spec:
  action: CUSTOM
  selector:
    matchLabels:
      app: api
  rules:
    - to:
        - operation:
            ports:
              - "8080"
