internal/adapters/istio/testdata/peerauthentication_disable.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: production
  uid: pa-disable-001
spec:
  selector:
    matchLabels:
      app: debug
  mtls:
    mode: DISABLE
