internal/adapters/istio/testdata/peerauthentication_meshwide.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
  uid: pa-meshwide-001
spec:
  mtls:
    mode: STRICT
