internal/adapters/istio/testdata/sidecar_ingress.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: custom-ingress
  namespace: production
  uid: sc-ingress-001
spec:
  workloadSelector:
    labels:
      app: api
  ingress:
    - port:
        number: "8080"
        protocol: HTTP
        name: http
  egress:
    - hosts:
        - "./*"
