internal/adapters/istio/testdata/sidecar_no_selector.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: namespace-wide
  namespace: production
  uid: sc-noselector-001
spec:
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
        - "monitoring/*"
